[package]
name = "rust-api"
version = "0.1.0"
edition = "2018"
authors = ["Sami Barbut-Dica (https://github.com/WarriorsSami)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"

rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }